fix sonarqube warning